# ScriptableTCP

./: CMakeLists.txt  README.md  imgui.ini
include/: Application.hpp  Server.hpp
include/State/: Client.hpp  Error.hpp  Host.hpp  HostInfo.hpp  MainMenu.hpp  State.hpp
src/: Application.cpp  Server.cpp  TextEditor.cpp
src/State/: Client.cpp  Error.cpp  Host.cpp  HostInfo.cpp  MainMenu.cpp  State.cpp
